--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@googlemaps/js-api-loader": "^1.13.10",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.6",
     "@testing-library/jest-dom": "^5.16.1",
